--- a/www/index.html
+++ b/www/index.html
@@ -1310,183 +1310,89 @@
                         <br>
                     </div>
                     <br>
-                    <div class="row">
+                    <div class="row" style="border-top: 1px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <a>Uniform Type:</a>
+                            <br>
+                            <a>Context Height:</a>
                             <br>
                             <br>
                         </div>
                     </div>
-                    <div class="row" style="text-align: right;">
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>float</a>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>SCREEN_SIZE</a>
                         </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
                             <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_float" type="checkbox" value="">
-                                <label for="uniform_type_float"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>int</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_int" type="checkbox" value="">
-                                <label for="uniform_type_int"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>bool</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_bool" type="checkbox" value="">
-                                <label for="uniform_type_bool"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>vec2</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_vec2" type="checkbox" value="">
-                                <label for="uniform_type_vec2"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>vec3</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_vec3" type="checkbox" value="">
-                                <label for="uniform_type_vec3"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>vec4</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_vec4" type="checkbox" value="">
-                                <label for="uniform_type_vec4"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>ivec2</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_ivec2" type="checkbox" value="">
-                                <label for="uniform_type_ivec2"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>ivec3</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_ivec3" type="checkbox" value="">
-                                <label for="uniform_type_ivec3"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>ivec4</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_ivec4" type="checkbox" value="">
-                                <label for="uniform_type_ivec4"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>bvec2</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_bvec2" type="checkbox" value="">
-                                <label for="uniform_type_bvec2"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>bvec3</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_bvec3" type="checkbox" value="">
-                                <label for="uniform_type_bvec3"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>bvec4</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_bvec4" type="checkbox" value="">
-                                <label for="uniform_type_bvec4"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>mat2</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_mat2" type="checkbox" value="">
-                                <label for="uniform_type_mat2"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>mat3</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_mat3" type="checkbox" value="">
-                                <label for="uniform_type_mat3"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>mat4</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_mat4" type="checkbox" value="">
-                                <label for="uniform_type_mat4"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>sampler2d</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_sampler2d" type="checkbox" value="">
-                                <label for="uniform_type_sampler2d"></label>
-                            </div>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end;">
-                            <a>samplercube</a>
-                        </div>
-                        <div class="col-6 col-sm-2 col-md-2 col-lg-2">
-                            <div class="checkbox">
-                                <input style="float:right;" id="uniform_type_samplercube" type="checkbox" value="">
-                                <label for="uniform_type_samplercube"></label>
+                                <input style="float:right;" id="height_screen_size" type="checkbox" value="">
+                                <label for="height_screen_size"></label>
                             </div>
                         </div>
                     </div>
                     <br>
-                    <div class="row" style="border-bottom: 2px solid #fff;">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <button type="button" class="btn btn-outline-danger mx-auto">Delete Variable</button>
-                            <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>NEXT_LOWEST_POWER_OF_TWO</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="height_next_lowest_power_of_two" type="checkbox"
+                                    value="">
+                                <label for="height_next_lowest_power_of_two"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>NEXT_HIGHEST_POWER_OF_TWO</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="height_next_highest_power_of_two" type="checkbox"
+                                    value="">
+                                <label for="height_next_highest_power_of_two"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end;">
+                            <a>EXACT</a>
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                        </div>
+                        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">
+                            <div class="checkbox">
+                                <input style="float:right;" id="height_exact" type="checkbox" value="">
+                                <label for="height_exact"></label>
+                            </div>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <button type="button" class="btn btn-outline-success mx-auto">Add Uniform
-                                Variable</button>
-                            <br>
+                            <textarea id="algorithm_javascript" rows="8"
+                                style="text-align:left; border: 1px solid #FFF;" placeholder="Enter JavaScript here..."
+                                value="{{algorithm.client}}"></textarea>
                         </div>
+                        <br>
                     </div>
+                    <br>
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a>Vertex Shader</a>
@@ -1505,7 +1411,7 @@
                     <br>
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <a>Fragment Shader:</a>
+                            <a>Mesh Indices Evaluation:</a>
                             <br>
                             <br>
                         </div>
@@ -1514,21 +1420,21 @@
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <textarea id="program_frag_code" rows="8" style="text-align:left; border: 1px solid #FFF;"
                                 placeholder="Enter JavaScript here..."
-                                value="{{algorithm.programs[0].frag_code}}"></textarea>
+                                value="{{algorithm.pipeline[0].stages[0].frag_code}}"></textarea>
                         </div>
                         <br>
                     </div>
                     <br>
                     <div class="row" style="border-bottom: 2px solid #fff;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <button type="button" class="btn btn-outline-danger mx-auto">Delete Program</button>
+                            <button type="button" class="btn btn-outline-danger mx-auto">Delete Pipeline Stage</button>
                             <br>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <button type="button" class="btn btn-outline-success mx-auto">Add OpenGL Program</button>
+                            <button type="button" class="btn btn-outline-success mx-auto">Add Pipeline Stage</button>
                             <br>
                         </div>
                     </div>
