--- a/www/index.html
+++ b/www/index.html
@@ -924,21 +924,21 @@
 
 
 
-                    <div class="row" style="border-bottom: 2px solid #fff;">
+                    <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <button type="button" class="btn btn-outline-warning mx-auto">Move Context Up</button>
                             <br>
                         </div>
                     </div>
                     <br>
-                    <div class="row" style="border-bottom: 2px solid #fff;">
+                    <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <button type="button" class="btn btn-outline-warning mx-auto">Move Context Down</button>
                             <br>
                         </div>
                     </div>
                     <br>
-                    <div class="row" style="border-bottom: 2px solid #fff;">
+                    <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <button type="button" class="btn btn-outline-warning mx-auto">Duplicate Stage</button>
                             <br>
@@ -1234,14 +1234,14 @@
                         <br>
                     </div>
                     <br>
-                    <div class="row" style="border-bottom: 2px solid #fff;">
+                    <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <button type="button" class="btn btn-outline-warning mx-auto">Move Program Up</button>
                             <br>
                         </div>
                     </div>
                     <br>
-                    <div class="row" style="border-bottom: 2px solid #fff;">
+                    <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <button type="button" class="btn btn-outline-warning mx-auto">Move Program Down</button>
                             <br>
@@ -1255,7 +1255,7 @@
                         </div>
                     </div>
                     <br>
-                    <div class="row" style="border-bottom: 2px solid #fff;">
+                    <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <button type="button" class="btn btn-outline-danger mx-auto">Delete Program</button>
                             <br>
@@ -1489,21 +1489,21 @@
                         <br>
                     </div>
                     <br>
-                    <div class="row" style="border-bottom: 2px solid #fff;">
+                    <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <button type="button" class="btn btn-outline-warning mx-auto">Move Stage Up</button>
                             <br>
                         </div>
                     </div>
                     <br>
-                    <div class="row" style="border-bottom: 2px solid #fff;">
+                    <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <button type="button" class="btn btn-outline-warning mx-auto">Move Stage Down</button>
                             <br>
                         </div>
                     </div>
                     <br>
-                    <div class="row" style="border-bottom: 2px solid #fff;">
+                    <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <button type="button" class="btn btn-outline-warning mx-auto">Duplicate Stage</button>
                             <br>
