--- a/www/index.html
+++ b/www/index.html
@@ -72,8 +72,7 @@
                 2. Cookie Policy
                 <br>
                 <br>
-                Our website does not use cookies to track any of your online events (which is why you have to log in
-                every time you move to a new window).
+                Our website you free cookies.
                 <br>
                 <br>
                 <br>
